chore: update fig paths

--- a/book/lectures/nlp_deep/tokenization/lab-train-tokenizers.ipynb
+++ b/book/lectures/nlp_deep/tokenization/lab-train-tokenizers.ipynb
@@ -1,14 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "cjgz1WTcPWee"
    },
    "source": [
-    "# Lab 3: Training Tokenizers\n",
+    "# Lab: Training Tokenizers\n",
     "\n",
-    "![](../figs/deep_nlp/lab/tokenize.png)\n"
+    "![](figs/entelecheia_alphabets.png)\n"
    ]
   },
   {
@@ -19,12 +20,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "```python\n",
     "%pip install --pre ekorpkit[tokenize]\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -1504,12 +1506,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "> time: 15h 30min 58s (started: 2022-11-11 06:36:01 +00:00)\n",
     "\n",
-    "To train a BPE tokenizer, it took 15 hours and 30 minutes for the 2,998,856 sentences. The tokenizer was saved in the `{project_dir}/tokenizers` directory."
+    "To train a BPE tokenizer, it took 15 hours and 30 minutes for the 2,998,856 sentences. The tokenizer was saved in the `{project_dir}/tokenizers` directory.\n"
    ]
   },
   {
@@ -1520,6 +1523,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1536,14 +1540,15 @@
     "    tokenizer.model.character_coverage=0.9995 \\\n",
     "    tokenizer.training.use_sample=false \\\n",
     "    tokenizer.auto=train\n",
-    "```    "
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> took 22m 36.6s \n",
+    "> took 22m 36.6s\n",
     "\n",
     "With 256 processors, it took 22 minutes and 37 seconds to tokenize the 2,998,856 sentences.\n"
    ]
@@ -1585,6 +1590,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1592,10 +1598,11 @@
     "model_path = train_tokenizer(\"UNI\")\n",
     "```\n",
     "\n",
-    "For a very large corpus, it may take a long time to train a Unigram tokenizer. It is recommended to use the following CLI command to train a Unigram tokenizer."
+    "For a very large corpus, it may take a long time to train a Unigram tokenizer. It is recommended to use the following CLI command to train a Unigram tokenizer.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1612,14 +1619,15 @@
     "    tokenizer.training.use_sample=false \\\n",
     "    tokenizer.batch.num_workers=128 \\\n",
     "    tokenizer.auto=train\n",
-    "```    "
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">  took 10m 10.7s\n",
+    "> took 10m 10.7s\n",
     "\n",
     "With 256 processors, it took 10 minutes and 11 seconds to tokenize the 2,998,856 sentences.\n"
    ]
@@ -1643,14 +1651,12 @@
    "source": [
     "from tokenizers import Tokenizer\n",
     "\n",
-    "tokenizer_path = (\n",
-    "    f\"{project_dir}/tokenizers/hf/enko_wiki/enko_wiki_unigram_huggingface_vocab_30000.json\"\n",
-    ")\n",
+    "tokenizer_path = f\"{project_dir}/tokenizers/hf/enko_wiki/enko_wiki_unigram_huggingface_vocab_30000.json\"\n",
     "\n",
     "unigram_tokenizer = Tokenizer.from_file(tokenizer_path)\n",
     "print(f\"Vocab size: {bpe_tokenizer.get_vocab_size()}\")\n",
     "print(unigram_tokenizer.encode(text_en[0]).tokens)\n",
-    "print(unigram_tokenizer.encode(text_ko[0]).tokens)"
+    "print(unigram_tokenizer.encode(text_ko[0]).tokens)\n"
    ]
   },
   {
@@ -1733,6 +1739,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1750,14 +1757,15 @@
     "    tokenizer.training.use_sample=false \\\n",
     "    tokenizer.batch.num_workers=128 \\\n",
     "    tokenizer.auto=train\n",
-    "```    "
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">  took 4m 2.4s\n",
+    "> took 4m 2.4s\n",
     "\n",
     "With 128 processors, it took 4 minutes and 2 seconds to tokenize the 2,998,856 sentences.\n"
    ]
@@ -1804,6 +1812,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1821,14 +1830,15 @@
     "    tokenizer.training.use_sample=false \\\n",
     "    tokenizer.batch.num_workers=128 \\\n",
     "    tokenizer.auto=train\n",
-    "```    "
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">  took 8m 41.8s\n",
+    "> took 8m 41.8s\n",
     "\n",
     "With 128 processors, it took 8 minutes and 42 seconds to tokenize the 2,998,856 sentences.\n"
    ]
@@ -1952,7 +1962,7 @@
     }
    ],
    "source": [
-    "texts = [text_en[0] , text_ko[0]]\n",
+    "texts = [text_en[0], text_ko[0]]\n",
     "tokens = {name: [] for name in tokenizers.keys()}\n",
     "\n",
     "\n",
@@ -1962,7 +1972,7 @@
     "        print(f\"Tokenizer: {name}\")\n",
     "        tokens[name].append(tokenize(tokenizer, text))\n",
     "        print(tokens[name][-1])\n",
-    "        print(\"-\" * 50)"
+    "        print(\"-\" * 50)\n"
    ]
   },
   {
@@ -1990,7 +2000,6 @@
     "\n",
     "\n",
     "def compare_tokens(tokenizers, tokens, sample_num=0):\n",
-    "\n",
     "    max_len = max(len(tokens[name][sample_num]) for name in tokenizers.keys())\n",
     "    diffs = {\n",
     "        name: max_len - len(tokens[name][sample_num]) for name in tokenizers.keys()\n",
@@ -2002,7 +2011,7 @@
     "    }\n",
     "\n",
     "    df = pd.DataFrame(padded_tokens)\n",
-    "    return df"
+    "    return df\n"
    ]
   },
   {
@@ -2648,10 +2657,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Usage of Tokenizer Trainer"
+    "## Usage of Tokenizer Trainer\n"
    ]
   },
   {
@@ -2696,6 +2706,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2714,10 +2725,11 @@
     "    tokenizer.training.use_sample=false \\\n",
     "    tokenizer.batch.num_workers=128 \\\n",
     "    tokenizer.auto=train\n",
-    "```"
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "scrolled": true,
@@ -2727,7 +2739,6 @@
    },
    "source": [
     "### Unigram Model by Hugging Face\n",
-    "\n",
     "\n",
     "```bash\n",
     "ekorpkit \\\n",
@@ -2742,10 +2753,11 @@
     "    tokenizer.training.use_sample=false \\\n",
     "    tokenizer.batch.num_workers=128 \\\n",
     "    tokenizer.auto=train\n",
-    "```"
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2765,10 +2777,11 @@
     "    tokenizer.training.use_sample=false \\\n",
     "    tokenizer.batch.num_workers=128 \\\n",
     "    tokenizer.auto=train\n",
-    "```"
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2788,14 +2801,15 @@
     "    tokenizer.training.use_sample=false \\\n",
     "    tokenizer.batch.num_workers=128 \\\n",
     "    tokenizer.auto=train\n",
-    "```"
+    "```\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compare the Tokenizers"
+    "### Compare the Tokenizers\n"
    ]
   },
   {
@@ -2823,8 +2837,8 @@
     "    cfg.name = name\n",
     "    cfg.model.model_type = model_type\n",
     "    trainer = TokenizerTrainer(**cfg)\n",
-    "    \n",
-    "    return trainer.tokenizer_obj"
+    "\n",
+    "    return trainer.tokenizer_obj\n"
    ]
   },
   {
@@ -2909,11 +2923,11 @@
    "source": [
     "tokenizers = {}\n",
     "\n",
-    "for trainer_type in ['spm', 'huggingface']:\n",
-    "    for model_type in ['bpe', 'unigram']:\n",
+    "for trainer_type in [\"spm\", \"huggingface\"]:\n",
+    "    for model_type in [\"bpe\", \"unigram\"]:\n",
     "        name = f\"{model_type}_{trainer_type}\"\n",
     "        print(name)\n",
-    "        tokenizers[name] = load_tokenizer(trainer_type, model_type, \"bnwiki\")"
+    "        tokenizers[name] = load_tokenizer(trainer_type, model_type, \"bnwiki\")\n"
    ]
   },
   {
@@ -3404,10 +3418,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Usage of Tokenizer Trainer"
+    "## Usage of Tokenizer Trainer\n"
    ]
   },
   {
@@ -3484,7 +3499,7 @@
     }
    ],
    "source": [
-    "data_file =\"data/enko_filtered.parquet\"\n",
+    "data_file = \"data/enko_filtered.parquet\"\n",
     "\n",
     "cfg = eKonf.compose(\"tokenizer=trainer\")\n",
     "cfg.name = \"enkowiki\"\n",
@@ -3496,7 +3511,7 @@
     "# cfg.auto = \"train\"\n",
     "\n",
     "print(cfg.path.data_dir)\n",
-    "# eKonf.copy(f\"{project_dir}/{data_file}\", cfg.path.data_dir)"
+    "# eKonf.copy(f\"{project_dir}/{data_file}\", cfg.path.data_dir)\n"
    ]
   },
   {
@@ -3593,6 +3608,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3609,7 +3625,7 @@
     "    tokenizer._train_.use_sample=false \\\n",
     "    tokenizer.batch.num_workers=128 \\\n",
     "    tokenizer.auto=train\n",
-    "```    "
+    "```\n"
    ]
   }
  ],
