--- a/book/lectures/nlp_deep/training/lab-pretraining-lms.ipynb
+++ b/book/lectures/nlp_deep/training/lab-pretraining-lms.ipynb
@@ -1,28 +1,31 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 4: Pretraining Language Models\n",
+    "# Lab: Pretraining Language Models\n",
     "\n",
-    "![](../figs/deep_nlp/lab/train.png)"
+    "![](figs/train.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have our dataset and tokenizer, in this lab, we will train a language model on a large corpus of text from scratch."
+    "Now that we have our dataset and tokenizer, in this lab, we will train a language model on a large corpus of text from scratch.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "```python\n",
     "%pip install --pre ekorpkit[model]\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -163,6 +166,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,7 +177,6 @@
     "### TL;DR\n",
     "\n",
     "Use `NFKC` normalization to normalize your text before training your language model.\n",
-    "\n",
     "\n",
     "### Unicode Normalization Forms\n",
     "\n",
@@ -196,7 +199,7 @@
     "In Python, you can use the `unicodedata` module to normalize your text. The `unicodedata.normalize` function takes two arguments:\n",
     "\n",
     "- `form`: The normalization form to use. This can be one of the following: `NFC`, `NFD`, `NFKC`, `NFKD`.\n",
-    "- `unistr`: The string to normalize."
+    "- `unistr`: The string to normalize.\n"
    ]
   },
   {
@@ -228,6 +231,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -241,7 +245,7 @@
     "\n",
     "BERT was originally pre-trained on 1 Million Steps with a global batch size of 256.\n",
     "\n",
-    "> \"We train with batch size of 256 sequences (256 sequences * 512 tokens = 128,000 tokens/batch) for 1,000,000 steps, which is approximately 40 epochs over the 3.3 billion word corpus.\"\n",
+    "> \"We train with batch size of 256 sequences (256 sequences \\* 512 tokens = 128,000 tokens/batch) for 1,000,000 steps, which is approximately 40 epochs over the 3.3 billion word corpus.\"\n",
     "\n",
     "For more information, see the lecture notes on BERT.\n",
     "\n",
@@ -251,11 +255,11 @@
     "\n",
     "Example:\n",
     "\n",
-    "> Input: \"The dog [MASK] the apple\"\n",
-    "\n"
+    "> Input: \"The dog [MASK] the apple\"\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -263,7 +267,7 @@
     "\n",
     "Before training our language model, we need to preprocess our dataset. We will use our tokenizer to tokenize our dataset and then convert the tokens to their IDs. If we have a sentence that is longer than the maximum sequence length, we will truncate the sentence. If the sentence is shorter than the maximum sequence length, we will pad the sentence with the padding token.\n",
     "\n",
-    "Unlike the original BERT paper, we will not use the WordPiece tokenization algorithm. Instead, we will use the `unigram` tokenization algorithm."
+    "Unlike the original BERT paper, we will not use the WordPiece tokenization algorithm. Instead, we will use the `unigram` tokenization algorithm.\n"
    ]
   },
   {
@@ -339,10 +343,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the tokenizer"
+    "### Load the tokenizer\n"
    ]
   },
   {
@@ -363,10 +368,8 @@
     "from transformers import AutoTokenizer\n",
     "\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    project_dir + \"/tokenizers/enko_wiki\"\n",
-    ")\n",
-    "print(f\"is_fast: {tokenizer.is_fast}\")"
+    "tokenizer = AutoTokenizer.from_pretrained(project_dir + \"/tokenizers/enko_wiki\")\n",
+    "print(f\"is_fast: {tokenizer.is_fast}\")\n"
    ]
   },
   {
@@ -397,10 +400,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the dataset"
+    "### Load the dataset\n"
    ]
   },
   {
@@ -461,10 +465,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tokenize the dataset"
+    "### Tokenize the dataset\n"
    ]
   },
   {
@@ -517,6 +522,7 @@
    "source": [
     "from itertools import chain\n",
     "\n",
+    "\n",
     "# Main data processing function that will concatenate all texts from our dataset and generate chunks of\n",
     "# max_seq_length.\n",
     "def group_texts(examples):\n",
@@ -541,23 +547,25 @@
     "tokenized_dataset = tokenized_dataset.shuffle(seed=1234)\n",
     "\n",
     "print(f\"the dataset contains in total {len(tokenized_dataset)*context_length} tokens\")\n",
-    "# the dataset contains in total 137,816,832 tokens"
+    "# the dataset contains in total 137,816,832 tokens\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have 137,816,832 tokens in our dataset. For reference, the original BERT paper used 3.2 billion tokens, and GPT-3 uses 300 billion tokens."
+    "We have 137,816,832 tokens in our dataset. For reference, the original BERT paper used 3.2 billion tokens, and GPT-3 uses 300 billion tokens.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Initializing a New Model\n",
     "\n",
-    "We will initialize a new model using the `bert-base-uncased` configuration. We will then save the configuration to a file so that we can use it later when we load the model."
+    "We will initialize a new model using the `bert-base-uncased` configuration. We will then save the configuration to a file so that we can use it later when we load the model.\n"
    ]
   },
   {
@@ -600,10 +608,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our model have 109.1 million parameters just like the original BERT model."
+    "Our model have 109.1 million parameters just like the original BERT model.\n"
    ]
   },
   {
@@ -629,12 +638,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Set up a DataCollator\n",
     "\n",
-    "Before we can start training, we need to set up a data collator that will be used to collate the batches of data. We will use the `DataCollatorForLanguageModeling` data collator, which will take care of masking the tokens and padding the sequences."
+    "Before we can start training, we need to set up a data collator that will be used to collate the batches of data. We will use the `DataCollatorForLanguageModeling` data collator, which will take care of masking the tokens and padding the sequences.\n"
    ]
   },
   {
@@ -668,12 +678,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Load the Tokenized Dataset\n",
     "\n",
-    "Our dataset is already tokenized, there are 268,366 examples in our dataset."
+    "Our dataset is already tokenized, there are 268,366 examples in our dataset.\n"
    ]
   },
   {
@@ -712,10 +723,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the output of the first batch of data."
+    "Check the output of the first batch of data.\n"
    ]
   },
   {
@@ -742,6 +754,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -749,7 +762,7 @@
     "\n",
     "We will configure the training arguments and then set up a trainer to train our model.\n",
     "\n",
-    "### Configure the Training Arguments"
+    "### Configure the Training Arguments\n"
    ]
   },
   {
@@ -804,10 +817,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train the Model"
+    "### Train the Model\n"
    ]
   },
   {
@@ -841,19 +855,21 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It took 6h 33m 0.0s to train our model for 40 epochs."
+    "It took 6h 33m 0.0s to train our model for 40 epochs.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Testing the Model\n",
     "\n",
-    "We will load our model and test it on a few examples."
+    "We will load our model and test it on a few examples.\n"
    ]
   },
   {
@@ -950,10 +966,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Usage of MLM Trainer"
+    "## Usage of MLM Trainer\n"
    ]
   },
   {
@@ -1093,6 +1110,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1113,7 +1131,7 @@
     "    transformer.training.eval_steps=500 \\\n",
     "    transformer.training.warmup_steps=100 \\\n",
     "    transformer.auto=train\n",
-    "```    "
+    "```\n"
    ]
   },
   {
@@ -1330,10 +1348,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training bnwiki_bert using MLM Trainer"
+    "## Training bnwiki_bert using MLM Trainer\n"
    ]
   },
   {
@@ -1532,6 +1551,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1552,7 +1572,7 @@
     "    transformer.training.eval_steps=100 \\\n",
     "    transformer.training.warmup_steps=50 \\\n",
     "    transformer.auto=train\n",
-    "```    "
+    "```\n"
    ]
   },
   {
@@ -1575,12 +1595,13 @@
    ],
    "source": [
     "# perform predictions\n",
-    "example = \"এই মসজিদটির ভিত্তিপ্রস্তর Nov 25, 2022 at 1:21:19 PM GMT+9<mask> ২০১৫ সালের জুন মাসে।\" # হয়েছিলো\n",
+    "example = \"এই মসজিদটির ভিত্তিপ্রস্তর Nov 25, 2022 at 1:21:19 PM GMT+9<mask> ২০১৫ সালের জুন মাসে।\"  # হয়েছিলো\n",
     "for prediction in trainer.fill_mask(example):\n",
-    "    print(prediction)"
+    "    print(prediction)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "notebookRunGroups": {
@@ -1591,7 +1612,7 @@
     "## References\n",
     "\n",
     "- [Unicode equivalence](https://en.wikipedia.org/wiki/Unicode_equivalence)\n",
-    "- [Training a causal language model from scratch](https://huggingface.co/course/chapter7/6?fw=pt)"
+    "- [Training a causal language model from scratch](https://huggingface.co/course/chapter7/6?fw=pt)\n"
    ]
   }
  ],
