chore: update fig paths

--- a/book/lectures/nlp_deep/transformers/bertviz.ipynb
+++ b/book/lectures/nlp_deep/transformers/bertviz.ipynb
@@ -108,7 +108,7 @@
     ")\n",
     "outputs = model(inputs)\n",
     "attention = outputs[-1]\n",
-    "tokens = tokenizer.convert_ids_to_tokens(inputs[0])"
+    "tokens = tokenizer.convert_ids_to_tokens(inputs[0])\n"
    ]
   },
   {
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "head_view(attention, tokens)"
+    "head_view(attention, tokens)\n"
    ]
   },
   {
@@ -255,7 +255,7 @@
     "neuron_model = BertModel.from_pretrained(model_version, output_attentions=True)\n",
     "neuron_tokenizer = BertTokenizer.from_pretrained(\n",
     "    model_version, do_lower_case=do_lower_case\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -272,7 +272,7 @@
    "source": [
     "show(\n",
     "    neuron_model, model_type, neuron_tokenizer, sentence_a, sentence_b, layer=2, head=0\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -293,7 +293,7 @@
     ")\n",
     "outputs = model(inputs)\n",
     "attention = outputs[-1]\n",
-    "tokens = tokenizer.convert_ids_to_tokens(inputs[0])"
+    "tokens = tokenizer.convert_ids_to_tokens(inputs[0])\n"
    ]
   },
   {
@@ -338,7 +338,7 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/bert/neuron_view_delimiter.png)\n"
+    "![](figs/neuron_view_delimiter.png)\n"
    ]
   },
   {
@@ -354,7 +354,7 @@
    "source": [
     "In the Key column, the key vectors for the two occurrences of [SEP] carry a distinctive signature: they both have a small number of active neurons with strongly positive (blue) or negative (orange) values, and a larger number of neurons with values close to zero (light blue/orange or white):\n",
     "\n",
-    "![](../figs/deep_nlp/bert/key_vector_sep.png)\n"
+    "![](figs/key_vector_sep.png)\n"
    ]
   },
   {
@@ -370,7 +370,7 @@
    "source": [
     "The query vectors tend to match the [SEP] key vectors along those active neurons, resulting in high values for the elementwise product q×k, as in this example:\n",
     "\n",
-    "![](../figs/deep_nlp/bert/query_key_sep.png)\n",
+    "![](figs/query_key_sep.png)\n",
     "\n",
     "The query vectors for the other words follow a similar pattern: they match the [SEP] key vector along the same set of neurons. Thus it seems that BERT has designated a small set of neurons as “[SEP]-matching neurons,” and the query vectors assigned values that match the [SEP] key vectors at these positions.\n"
    ]
@@ -400,7 +400,7 @@
    },
    "outputs": [],
    "source": [
-    "head_view(attention, tokens, layer=6, heads=[4])"
+    "head_view(attention, tokens, layer=6, heads=[4])\n"
    ]
   },
   {
@@ -434,7 +434,7 @@
     "tags": []
    },
    "source": [
-    "![](../figs/deep_nlp/bert/neuron_view_bow.png)\n"
+    "![](figs/neuron_view_bow.png)\n"
    ]
   },
   {
@@ -450,7 +450,7 @@
    "source": [
     "In the $q×k$ column, we see a clear pattern: a small number of neurons (2–4) dominate the calculation of the attention scores. When query and key vector are in the same sentence (the first sentence, in this case), the product shows high values (blue) at these neurons. When query and key vector are in different sentences, the product is strongly negative (orange) at these same positions, as in this example:\n",
     "\n",
-    "![](../figs/deep_nlp/bert/query_key_bow.png)\n",
+    "![](figs/query_key_bow.png)\n",
     "\n",
     "When query and key are both from sentence 1, they tend to have values with the same sign along the active neurons, resulting in a positive product. When the query is from sentence 1, and the key is from sentence 2, the same neurons tend to have values with opposite signs, resulting in a negative product.\n"
    ]
@@ -468,7 +468,7 @@
    "source": [
     "How does BERT know the concept of “sentence”, especially in the first layer of the network before higher-level abstractions are formed? As mentioned earlier, BERT accepts special [SEP] tokens that mark sentence boundaries. Additionally, BERT incorporates sentence-level embeddings that are added to the input layer. The information encoded in these sentence embeddings flows to downstream variables, i.e. queries and keys, and enables them to acquire sentence-specific values.\n",
     "\n",
-    "![](../figs/deep_nlp/bert/sentence_embedding.png)\n"
+    "![](figs/sentence_embedding.png)\n"
    ]
   },
   {
@@ -492,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "head_view(attention, tokens, layer=0, heads=[0])"
+    "head_view(attention, tokens, layer=0, heads=[0])\n"
    ]
   },
   {
@@ -511,7 +511,7 @@
     "\n",
     "Let’s check out the neuron view for this pattern:\n",
     "\n",
-    "![](../figs/deep_nlp/bert/neuron_view_next_word.png)\n"
+    "![](figs/neuron_view_next_word.png)\n"
    ]
   },
   {
@@ -523,7 +523,7 @@
     "\n",
     "For this attention pattern, a large number of neurons figure into the attention score, and these neurons differ depending on the token position, as illustrated here:\n",
     "\n",
-    "![](../figs/deep_nlp/bert/query_key_next_word.png)\n"
+    "![](figs/query_key_next_word.png)\n"
    ]
   },
   {
@@ -580,7 +580,7 @@
    },
    "outputs": [],
    "source": [
-    "head_view(attention, tokens, layer=2, heads=[0])"
+    "head_view(attention, tokens, layer=2, heads=[0])\n"
    ]
   },
   {
@@ -616,7 +616,7 @@
    },
    "outputs": [],
    "source": [
-    "head_view(attention, tokens, layer=6, heads=[11])"
+    "head_view(attention, tokens, layer=6, heads=[11])\n"
    ]
   },
   {
@@ -650,7 +650,7 @@
    },
    "outputs": [],
    "source": [
-    "head_view(attention, tokens, layer=2, heads=[6])"
+    "head_view(attention, tokens, layer=2, heads=[6])\n"
    ]
   },
   {
@@ -684,7 +684,7 @@
    },
    "outputs": [],
    "source": [
-    "head_view(attention, tokens, layer=10, heads=[10])"
+    "head_view(attention, tokens, layer=10, heads=[10])\n"
    ]
   },
   {
@@ -712,7 +712,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "head_view(attention, tokens, layer=2, heads=[1])"
+    "head_view(attention, tokens, layer=2, heads=[1])\n"
    ]
   },
   {
