docs: add lab-eda for deep nlp

--- a/book/lectures/nlp_intro/datasets/lab-corpus-eda.ipynb
+++ b/book/lectures/nlp_intro/datasets/lab-corpus-eda.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "cjgz1WTcPWee"
@@ -8,23 +9,25 @@
    "source": [
     "# Lab 2: EDA on Corpora\n",
     "\n",
-    "![](../figs/deep_nlp/lab/eda.png)"
+    "![](figs/eda.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare the environment"
+    "## Prepare the environment\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "```python\n",
     "%pip install --pre ekorpkit[dataset]\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -73,12 +76,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "it1Y0MVPXRsJ"
    },
    "source": [
-    "## Load the saved corpora"
+    "## Load the saved corpora\n"
    ]
   },
   {
@@ -247,10 +251,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filter and use only selected corpora"
+    "### Filter and use only selected corpora\n"
    ]
   },
   {
@@ -365,10 +370,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic statistics"
+    "## Basic statistics\n"
    ]
   },
   {
@@ -864,7 +870,7 @@
    ],
    "source": [
     "# Histogram\n",
-    "sns.histplot(data = enko_filtered, x = \"avg_num_chars\", hue = \"corpus\", kde = True)"
+    "sns.histplot(data=enko_filtered, x=\"avg_num_chars\", hue=\"corpus\", kde=True)\n"
    ]
   },
   {
@@ -956,10 +962,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Term Frequency Analysis"
+    "## Term Frequency Analysis\n"
    ]
   },
   {
@@ -1100,10 +1107,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Most Frequent N-Grams"
+    "## Most Frequent N-Grams\n"
    ]
   },
   {
@@ -1132,13 +1140,21 @@
     "\n",
     "# Create a DataFrame\n",
     "ngram_counts_df_en = pd.DataFrame(\n",
-    "    sorted(zip(vec_en.get_feature_names(), ngram_counts_en), key=lambda x: x[1], reverse=True),\n",
+    "    sorted(\n",
+    "        zip(vec_en.get_feature_names(), ngram_counts_en),\n",
+    "        key=lambda x: x[1],\n",
+    "        reverse=True,\n",
+    "    ),\n",
     "    columns=[\"ngram\", \"count\"],\n",
     ")\n",
     "ngram_counts_df_ko = pd.DataFrame(\n",
-    "    sorted(zip(vec_ko.get_feature_names(), ngram_counts_ko), key=lambda x: x[1], reverse=True),\n",
+    "    sorted(\n",
+    "        zip(vec_ko.get_feature_names(), ngram_counts_ko),\n",
+    "        key=lambda x: x[1],\n",
+    "        reverse=True,\n",
+    "    ),\n",
     "    columns=[\"ngram\", \"count\"],\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -1164,10 +1180,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Word Cloud"
+    "## Word Cloud\n"
    ]
   },
   {
