chore: modify heading levels

--- a/book/lectures/nlp_deep/llms/decoding.ipynb
+++ b/book/lectures/nlp_deep/llms/decoding.ipynb
@@ -70,7 +70,7 @@
     "tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
     "\n",
     "# add the EOS token as PAD token to avoid warnings\n",
-    "model = TFGPT2LMHeadModel.from_pretrained(\"gpt2\", pad_token_id=tokenizer.eos_token_id)\n"
+    "model = TFGPT2LMHeadModel.from_pretrained(\"gpt2\", pad_token_id=tokenizer.eos_token_id)"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "tags": []
    },
    "source": [
-    "### Greedy Search\n",
+    "## Greedy Search\n",
     "\n",
     "```{image} figs/entelecheia_greedy_search.png\n",
     ":alt: Greedy Search\n",
@@ -155,7 +155,7 @@
     "greedy_output = model.generate(input_ids, max_length=100)\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(greedy_output[0], skip_special_tokens=True))\n"
+    "print(tokenizer.decode(greedy_output[0], skip_special_tokens=True))"
    ]
   },
   {
@@ -287,7 +287,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(beam_output[0], skip_special_tokens=True))\n"
+    "print(tokenizer.decode(beam_output[0], skip_special_tokens=True))"
    ]
   },
   {
@@ -344,7 +344,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(beam_output[0], skip_special_tokens=True))\n"
+    "print(tokenizer.decode(beam_output[0], skip_special_tokens=True))"
    ]
   },
   {
@@ -400,7 +400,7 @@
     "# now we have 3 output sequences\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
     "for i, beam_output in enumerate(beam_outputs):\n",
-    "    print(\"{}: {}\".format(i, tokenizer.decode(beam_output, skip_special_tokens=True)))\n"
+    "    print(\"{}: {}\".format(i, tokenizer.decode(beam_output, skip_special_tokens=True)))"
    ]
   },
   {
@@ -458,7 +458,7 @@
     "tags": []
    },
    "source": [
-    "### Sampling\n",
+    "## Sampling\n",
     "\n",
     "Sampling means randomly picking the next word $w_t$ according to its conditional probability distribution:\n",
     "\n",
@@ -524,7 +524,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))\n"
+    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))"
    ]
   },
   {
@@ -595,7 +595,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))\n"
+    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))"
    ]
   },
   {
@@ -618,7 +618,7 @@
     "tags": []
    },
    "source": [
-    "### Top-K Sampling\n",
+    "## Top-K Sampling\n",
     "\n",
     "```{figure} figs/deepnlp_2_top_k_sampling.png\n",
     "---\n",
@@ -664,7 +664,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))\n"
+    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))"
    ]
   },
   {
@@ -697,7 +697,7 @@
     "tags": []
    },
    "source": [
-    "### Top-p (nucleus) sampling\n",
+    "## Top-p (nucleus) sampling\n",
     "\n",
     "```{figure} figs/deepnlp_2_top_p_sampling.png\n",
     "---\n",
@@ -754,7 +754,7 @@
     ")\n",
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
-    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))\n"
+    "print(tokenizer.decode(sample_output[0], skip_special_tokens=True))"
    ]
   },
   {
@@ -810,7 +810,7 @@
     "\n",
     "print(\"Output:\\n\" + 100 * \"-\")\n",
     "for i, sample_output in enumerate(sample_outputs):\n",
-    "    print(\"{}: {}\".format(i, tokenizer.decode(sample_output, skip_special_tokens=True)))\n"
+    "    print(\"{}: {}\".format(i, tokenizer.decode(sample_output, skip_special_tokens=True)))"
    ]
   },
   {
