--- a/_sources/lectures/nlp_deep/datasets/lab-eda.ipynb
+++ b/_sources/lectures/nlp_deep/datasets/lab-eda.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "ko_mc4 = load_dataset(\"mc4\", \"ko\")\n"
+    "ko_mc4 = load_dataset(\"mc4\", \"ko\")"
    ]
   },
   {
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "print(ko_mc4)"
+    "print(ko_mc4)\n"
    ]
   },
   {
@@ -131,7 +131,7 @@
    ],
    "source": [
     "sample = ko_mc4[\"train\"][100]\n",
-    "print(sample)"
+    "print(sample)\n"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "source": [
     "print(\"Number of instances:\")\n",
     "for split in ko_mc4.keys():\n",
-    "    print(f\"{split}: {len(ko_mc4[split])}\")\n"
+    "    print(f\"{split}: {len(ko_mc4[split])}\")"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text length distribution\n",
+    "## Text length distribution\n",
     "\n",
     "To understand the text length distribution, we'll create a histogram using `matplotlib` and `seaborn`:\n"
    ]
@@ -211,7 +211,7 @@
     "plt.title(\"Text Length Distribution\")\n",
     "plt.xlabel(\"Text Length\")\n",
     "plt.ylabel(\"Frequency\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -254,7 +254,7 @@
     "plt.title(\"Timestamp Distribution\")\n",
     "plt.xlabel(\"Timestamp\")\n",
     "plt.ylabel(\"Frequency\")\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
