--- a/_sources/lectures/nlp_intro/tokenization/index.ipynb
+++ b/_sources/lectures/nlp_intro/tokenization/index.ipynb
@@ -1705,10 +1705,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f5fab852",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Next\n",
+    "\n",
+    "```{tableofcontents}\n",
+    "\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
